--- a/echo-service/template.yaml
+++ b/echo-service/template.yaml
@@ -1,9 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  echo-service
-
-  Sample SAM Template for echo-service
+Description: echo-service
 
 Parameters:
   MainDomain:
@@ -13,9 +10,6 @@ Parameters:
   EnvDevDomain:
     Type: String
     Default: ""
-  Stage:
-    Type: String
-    Default: DEV
   SubDomain:
     Type: String
     Default: "api.echo."
@@ -42,12 +36,12 @@ Resources:
   APIGatewayV2:
     Type: AWS::Serverless::HttpApi
     Properties:
+      Name: !Sub ${AWS::StackName}-APIGatewayV2
       Domain: # Configure the domain of the API
         DomainName: !Join ["", [!Ref SubDomain, !Ref MainDomain]]
         CertificateArn: !Ref GenerateCertificate
         Route53:
           HostedZoneId: !Ref Route53ZoneId
-      StageName: !Ref Stage
       DisableExecuteApiEndpoint: True
 
   EchoGo:
@@ -55,6 +49,7 @@ Resources:
     Metadata:
       BuildMethod: go1.x
     Properties:
+      FunctionName: !Sub ${AWS::StackName}-EchoGo
       CodeUri: ./go
       Handler: bootstrap
       Runtime: provided.al2
