--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -23,6 +23,7 @@
         "@as-integrations/aws-lambda": "^2.0.0",
         "@aws-sdk/client-dynamodb": "^3.258.0",
         "@aws-sdk/client-rds-data": "^3.335.0",
+        "@aws-sdk/client-secrets-manager": "^3.347.1",
         "@aws-sdk/client-sqs": "^3.272.0",
         "@aws-sdk/util-dynamodb": "^3.288.0",
         "@aws/dynamodb-data-mapper": "^0.7.3",
