--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -34,6 +34,8 @@
     "@apollo/server": "^4.3.1",
     "@as-integrations/aws-lambda": "^2.0.0",
     "@aws-sdk/client-dynamodb": "^3.258.0",
+    "@aws-sdk/client-rds-data": "^3.344.0",
+    "@aws-sdk/client-secrets-manager": "^3.347.1",
     "@aws-sdk/client-sqs": "^3.272.0",
     "@aws-sdk/util-dynamodb": "^3.288.0",
     "@aws/dynamodb-data-mapper": "^0.7.3",
@@ -50,8 +52,7 @@
     "jsonwebtoken": "^9.0.0",
     "object-hash": "^3.0.0",
     "stripe": "^11.14.0",
-    "uuid": "^9.0.0",
-    "@aws-sdk/client-rds-data": "^3.344.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
