--- a/payment-service/samconfig.toml
+++ b/payment-service/samconfig.toml
@@ -7,7 +7,7 @@ s3_prefix = "dev-payment-service"
 resolve_s3 = true
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
+parameter_overrides = "ServicePrefix=\"dev\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
 image_repositories = []
 no_fail_on_empty_changeset =  true
 
@@ -23,7 +23,7 @@ s3_prefix = "live-payment-service"
 resolve_s3 = true
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
-parameter_overrides = "Stage=\"DEV\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
+parameter_overrides = "ServicePrefix=\"live\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 image_repositories = []
 no_fail_on_empty_changeset =  true
 
