--- a/search-service/samconfig.toml
+++ b/search-service/samconfig.toml
@@ -12,6 +12,10 @@ no_fail_on_empty_changeset =  true
 [default.logs.parameters]
 stack_name = "dev-search-service"
 
+[default.delete.parameters]
+stack_name = "dev-search-service"
+no_prompts = true
+
 [live.deploy.parameters]
 profile = "live_fastchargeapi"
 stack_name = "live-search-service"
