--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -37,7 +37,7 @@
         "match-sorter": "^6.3.1",
         "md5": "^2.3.0",
         "react": "^18.2.0",
-        "react-appevent-redux": "github:ylilarry/react-appevent-redux#dist",
+        "react-appevent-redux": "^1.0.4",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.3.0",
@@ -45,7 +45,7 @@
         "react-router-dom": "^6.8.1",
         "react-router-hash-link": "^2.4.3",
         "react-syntax-highlighter": "^15.5.0",
-        "react-terminal-ui": "github:ylilarry/react-terminal-ui",
+        "react-terminal-ui": "github:yuliswe/react-terminal-ui",
         "rehype-highlight": "^6.0.0",
         "rehype-remove-comments": "^5.0.0",
         "remark-gfm": "^3.0.1",
