--- a/search-service/package.json
+++ b/search-service/package.json
@@ -35,7 +35,7 @@
     "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
     "decimal.js-light": "^2.5.1",
-    "dynamoose": "github:ylilarry/dynamoose#dist",
+    "dynamoose": "github:yuliswe/dynamoose#dist",
     "dynamoose-logger": "^3.1.0",
     "dynamoose-utils": "^3.1.0",
     "graphql": "^16.6.0",
